--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html">
 <head>
-		<title>this behrad website</title>
+		<title>سایت بهراد فتح زاده</title>
 </head>
 <body>
 
-				<h1>this behrad website</h1>
+				<h1 style="color: blue;font-family: b titr;">
+					به سایت من خوش امدین
+				</h1>
 
 </body>
-</html>
+</html> 
