--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-				<h1 style="color: blue;font-family: b titr;">
+				<h1 style="color: blue;font-family: b titr; font-size: 50px;">
 					به سایت من خوش امدین
 				</h1>
 
