--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 </head>
 <body>
 
-				<h1 style="color: blue;font-family: b titr; font-size: 50px;">
+				<h1 style="color:aqua ;font-family: b titr; font-size: 50px;">
 					به سایت من خوش امدین
 				</h1>
+
+				<hr>
+
+				<p style="font-size: 10px;font-family: b titr;color: darkgray;">
+					این سایت خانوادکی است
+				</p>
+
 
 </body>
 </html> 
