--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<hr>
 
 				<p style="font-size: 25px;font-family: b titr;color: darkgray;">
-					این سایت خانوادکی است
+					این سایت خانوادگی است
 				</p>
 
 
