--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html dir="rtl">
 <head>
 		<title>سایت بهراد فتح زاده</title>
+		<link rel="stylesheet" href="wab.css">
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 
 				<hr>
 
-				<p style="font-size: 25px;font-family: b titr;color: darkgray;">
+				<p id="div2">
 					این سایت خانوادگی است
 				</p>
 
