--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-				<h1 style="color:aqua ;font-family: b titr; font-size: 50px;">
+				<h1 id="div1">
 					به سایت من خوش امدین
 				</h1>
 
@@ -15,6 +15,10 @@
 				<p id="div2">
 					این سایت خانوادگی است
 				</p>
+
+				<a href="index (2).html">
+					عکس های خانوادگی
+				</a>
 
 
 </body>
