--- a/index (2).html
+++ b/index (2).html
@@ -5,9 +5,9 @@
 </head>
 <body>
 	<div>
-<img src="01.jpg" alt="مشکل در بارگزاری">
-<img src="02.jpg" alt="مشکل در بارگزاری">
-<img src="03.jpg" alt="مشکل در بارگزاری">
+<img style="width: 20%;" src="01.jpg" alt="مشکل در بارگزاری">
+<img style="width: 20%;" src="02.jpg" alt="مشکل در بارگزاری">
+<img style="width: 20%;" src="03.jpg" alt="مشکل در بارگزاری">
 
 
 
