--- a/index (2).html
+++ b/index (2).html
@@ -8,6 +8,22 @@
 	<div>
 <img style="width: 20%;" src="01.jpg" alt="مشکل در بارگزاری">
 <img style="width: 20%;" src="02.jpg" alt="مشکل در بارگزاری">
+<img style="width: 20%;" src="04.jpg" alt="مشکل در بارگزاری">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <img style="width: 20%;" src="03.jpg" alt="مشکل در بارگزاری">
 
 
